--- a/Nodebird/.env
+++ b/Nodebird/.env
@@ -1,5 +1,6 @@
 COOKE_SECRET = COOKE_SECRET
 // 후자의 COOKE_SECRET 자리에 아무거나 적어줘도 됨! COOKE_SECRET의 비밀번호를 설정해주는 것임 
+KAKAO_ID = ce2d62b702f76ad42492d9aa1cce9fba
 
 // 개발용 포트
 PORT = 80
