--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "color-hash": "^2.0.2",
+    "cookie-signature": "^1.2.1",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1"
   }
