--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,20 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "root1",
+    "password": "Password",
+    "database": "nodeauction",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
+    "username": "root1",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
+    "username": "root1",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
